src/test/ui/lub-glb/old-lub-glb-hr.stderr
error[E0308]: match arms have incompatible types
  --> $DIR/old-lub-glb-hr.rs:16:14
   |
LL |       let z = match 22 {
   |  _____________-
LL | |         0 => x,
   | |              - this is found to be of type `for<'r, 's> fn(&'r u8, &'s u8)`
LL | |         _ => y,
   | |              ^ expected bound lifetime parameter, found concrete lifetime
LL | |     };
   | |_____- `match` arms have incompatible types
   |
   = note: expected type `for<'r, 's> fn(&'r u8, &'s u8)`
              found type `for<'a> fn(&'a u8, &'a u8)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
